# bot-ui-kitty

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: code_of_conduct.md  contributing.md  dependabot.yml  developer_certificate.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: simplify-readme.py
.github/workflows/: build.yml  codeql.yml  publish.yml
examples/: bot.py  dynamic_select.py  requirements.txt
scripts/: simplify-readme.py
uikitty/: __init__.py  base_selector.py  dynamic_selector.py  functions.py  paginator.py
